[PAY-2403] Fix purchase drawer height on small iphones

--- a/packages/web/src/components/drawer/Drawer.module.css
+++ b/packages/web/src/components/drawer/Drawer.module.css
@@ -18,7 +18,7 @@
 
 .fullDrawer {
   top: 0px;
-  height: 100vh;
+  height: min(100dvh, 100vh);
   overflow: hidden;
   touch-action: auto;
 }
